--- a/styles/styles.css
+++ b/styles/styles.css
@@ -336,6 +336,7 @@ section {
   text-align: center;
   padding: 3.5rem 0;
   position: relative;
+  color: var(--color-secondary);;
 }
 .stat-title::before {
   content: "";
@@ -404,6 +405,7 @@ section {
 .port-text {
   padding: 2rem 0;
   text-align: center;
+  color: var(--color-secondary);
 }
 
 .portfolios {
