--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,29 +11,20 @@
   --color-white: #fff;
 --color-black: #000;
 --color-text-1: #0B2850;
-    /*--color-grey0: #f8f8f8;
-  --color-grey-1: #6c7983;
-  --color-grey-2: #6c7983;
-  --color-grey-3: #6c7983; */
   --color-grey-4: #030b11;
-  --color-grey-5: rgb(170, 165, 165);
+  --color-grey-5: rgb(226, 221, 221);
   --color-grey-6: #12181b;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
 }
 
 .light-mode {
-  --color-primary: #8da1ec;
-  --color-secondary: #f00f47;
-  --color-white: #FFFFFF;
+  --color-secondary: #444DE9;
+  --color-white: #fff;
   --color-black: #000;
-  --color-grey0: #f8f8f8;
-  --color-grey-1: #dbe1e8;
-  --color-grey-2: #b2becd;
-  --color-grey-3: #6c7983;
-  --color-grey-4: #454e56;
-  --color-grey-5: #2a2e35;
-  --color-grey-6: #12181b;
+  --color-grey-4: #000;
+  --color-grey-5: #e0e3e7;
+  /* --color-grey-6: #12181b; */
 
 }
 
