--- a/styles/styles.css
+++ b/styles/styles.css
@@ -537,7 +537,7 @@ section {
   padding-bottom: 1rem;
 }
 
-.contact-content-con {
+/* .contact-content-con {
   display: flex;
   padding-top: 3.5rem;
 }
@@ -601,14 +601,51 @@ section {
   font-size: 1.3rem;
 }
 .contact-content-con .right-contact {
-  flex: 3;
-  margin-left: 3rem;
+ display: flex;
+ flex-direction:row;
+ justify-content: space-around;
+} */
+/* ========================================================== RESEAUX DANS MON CONTACT */
+.right-contact{
+  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-evenly; */
+  gap: 10px;
+  padding: 2%;
 }
+
+
+
+.socieaux{
+  display: flex;
+  flex-direction: row;
+text-align: center;  
+justify-content: space-around;
+  margin: 2%;
+}
+.socieaux .telecharger{
+    width: 10%;
+}
+.right-contact{
+  background-color: #0B2850;;
+}
+
+
+.socieaux span i{
+  font-size: 50px;
+  color: #fff;
+}
+.socieaux strong{
+  margin-left: 15px;
+  text-align: center;
+}
+
 .contact-content-con .right-contact .input-control {
   margin: 1.5rem 0;
 }
 .contact-content-con .right-contact .input-control input, .contact-content-con .right-contact .input-control textarea {
-  border-radius: 30px;
+  border-radius: 15px;
   font-weight: inherit;
   font-size: inherit;
   font-family: inherit;
@@ -678,6 +715,27 @@ section {
   transform: translateX(0);
   transition: all 0.4s ease-out;
 }
+
+
+
+.boutons-contact {
+  border-radius: 30px;
+  color: inherit;
+  font-weight: 600;
+  border: 1px solid var(--color-primary);
+  display: flex;
+  align-self: flex-start;
+  overflow: hidden;
+  width: 28%;
+}
+.bouton-contact .btn-text {
+margin: 2%;
+}
+.bouton-contact .btn-icon {
+ 
+}
+
+
 
 .main-title {
   text-align: center;
